fix: text contrast on warning color (refs SFKUI-6500)

--- a/packages/design/src/components/badge/_variables.scss
+++ b/packages/design/src/components/badge/_variables.scss
@@ -3,7 +3,7 @@ $badge-color-background-default: var(--fkds-color-feedback-background-neutral-st
 $badge-color-text-default-inverted: var(--fkds-color-text-primary) !default;
 $badge-color-background-default-inverted: var(--fkds-color-feedback-background-neutral) !default;
 $badge-color-border-default-inverted: var(--fkds-color-feedback-border-neutral) !default;
-$badge-color-text-warning: var(--fkds-color-text-primary) !default;
+$badge-color-text-warning: var(--fkds-color-feedback-text-on-warning) !default;
 $badge-color-background-warning: var(--fkds-color-feedback-background-warning-strong) !default;
 $badge-color-text-warning-inverted: var(--fkds-color-text-primary) !default;
 $badge-color-background-warning-inverted: var(--fkds-color-feedback-background-warning) !default;
