--- a/packages/design/src/components/modal/_modal.scss
+++ b/packages/design/src/components/modal/_modal.scss
@@ -104,6 +104,7 @@ $modal-width: calc(100vw - 40px) !default; // 100% - 20px each side;
     }
 
     &__dialog {
+        color: $modal-text-color-default;
         background: $modal-color-background;
         outline: 2px solid transparent; // forced-colors
         border-radius: var(--f-border-radius-medium);
@@ -162,6 +163,9 @@ $modal-width: calc(100vw - 40px) !default; // 100% - 20px each side;
 
     &--warning .modal__shelf {
         background-color: $modal-shelf-warning-color-background;
+        .close-button {
+            color: $modal-color-closebutton-text-warning;
+        }
     }
 
     &--error .modal__shelf {
