--- a/packages/theme-default/src/light/_variables.scss
+++ b/packages/theme-default/src/light/_variables.scss
@@ -72,6 +72,7 @@
     // FEEDBACK - TEXT
     --fkds-color-feedback-text-negative: #{$palette-color-red-100};
     --fkds-color-feedback-text-positive: #{$palette-color-green-a-85};
+    --fkds-color-feedback-text-on-warning: #{$palette-color-fk-black-100};
 
     // SELECT - BACKGROUND
     --fkds-color-select-background-primary-default: #{$palette-color-bluebell-100};
